[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-circuits"
dynamic = ["version"]
description = "Canonical circuit-definition layer for the RQM Technologies quantum software stack"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["quantum", "circuits", "quaternion", "IR", "rqm", "quantum computing", "gate model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-circuits"
Repository = "https://github.com/RQM-Technologies-dev/rqm-circuits"
"Bug Tracker" = "https://github.com/RQM-Technologies-dev/rqm-circuits/issues"
Changelog = "https://github.com/RQM-Technologies-dev/rqm-circuits/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rqm_circuits = ["py.typed"]

[tool.setuptools_scm]
# Derive version from git tags; fall back to "0.0.0+unknown" for untagged builds.
fallback_version = "0.0.0+unknown"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
strict = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
